# TkInstaller

./: .gitignore  README.md  __main__.py  build.py  installer_config.ini  pyproject.toml
tkinstaller/: config.py  utils.py
tkinstaller/ui/: extractor.py  installer.py  uninstaller.py
