[tool.poetry]
name = "tkinstaller"
version = "0.1.0"
description = "An Installer created using Tkinter"
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^10.2.0"
py7zr = "^0.20.8"

[tool.poetry.group.dev.dependencies]
shed = "^2024.1.1"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
